@@ -24,6 +24,7 @@ Stability update for v0.9.9
 * Fixed crash on sequence export with normalization
 * Fixed line endings in scripts for all OS
 * Fixed compilation for OpenCV 4.0
+* Fixed dark optimization
 
 v0.9.9, Jun 07, 2018
 Stability update for v0.9.8
