@@ -24,6 +24,7 @@ xxxxxxxx
 * Fixed crash on sequence export with normalization
 * Fixed line endings in scripts for all OS
 * Fixed compilation for OpenCV 4.0
+* Fixed dark optimization
 
 siril 0.9.9
 06/07/18
